--- a/src/styles/common/beautiful.scss
+++ b/src/styles/common/beautiful.scss
@@ -1,14 +1,15 @@
 ::-webkit-scrollbar {
-  width: 5px;
-  background-color: rgba(var(--v-theme-primary), 0.2);
+  width: 6px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: rgba(var(--v-theme-primary), 0.1);
+  border-radius: 6px;
+  // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: rgba(var(--v-theme-primary), 0.5);
 }
 html,
 body {
   overflow: hidden;
+  scroll-behavior: smooth;
 }
